@@ -11,6 +11,10 @@ Changes since version 0.92.0:
 - small fix for compilation in a different directory than the source
   (Balaton Zoltan <balaton@eik.bme.hu>)
 - fixed some warnings on 64bit platforms (Balaton Zoltan <balaton@eik.bme.hu>)
+- fixed issue with invisible modal windows from Qt and Gtk applications
+  on 64bit platforms (Max Loparyev <max@city.veganet.ru>)
+- fixed issue with icon colors on big endian platforms
+  (Max Loparyev <max@city.veganet.ru>)
 
 
 Changes since version 0.91.0:
